<resources>
    <string name="app_name">Tumo2.0</string>
    <string name="login_form">Login Form</string>
    <string name="bluetooth_info">Bluetooth Permission</string>
    <string name="email_id">Email ID</string>
    <string name="enter_email">Enter email</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter password</string>
    <string name="sign_in">Sign In</string>
    <string name="register_here">Register Here</string>
    <string name="enter_fullname">Enter fullname</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="fullname">FullName</string>
    <string name="baba_dashboard">Baba Dashboard</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="check_payments">Check Payments</string>
    <string name="signup">SignUp</string>
    <string name="recover_password">Recover Password</string>
    <string name="contact">Contact</string>
    <string name="enter_contact">Enter Contact</string>
</resources>